# hh_vacancy_parser

./: README.md  main.py  pyproject.toml  requirements.txt
htmlcov/: class_index.html
src/: hh.py  json_saver.py  parser.py  user_interaction.py  utils.py  vacancy.py  vacancy_saver.py
tests/: test_hh.py  test_parser.py  test_user_interaction.py  test_vacancy.py  test_vacancy_saver.py
