[project]
name = "hh-vacancy-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "Azat Khaliullin",email = "AllisonUno@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "types-requests (>=2.32.4.20250809,<3.0.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "hh_vacancy_parser", from = "src"}]


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
isort = "^6.0.1"
black = "^25.1.0"
mypy = "^1.17.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
requests = "^2.32.4"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
